Fix font family drop down alignment

--- a/src/App.global.css
+++ b/src/App.global.css
@@ -303,7 +303,7 @@ a:hover {
   font-size: small;
 }
 
-.ql-snow .ql-picker.ql-font {
+.editorContainerGroup .ql-snow .ql-picker.ql-font {
   margin-top: 10px;
 }
 
